Prevent touch scrolling when on login on mobile

--- a/assets/css/form-style.css
+++ b/assets/css/form-style.css
@@ -59,6 +59,7 @@ form input {
     opacity: 0.4;
     z-index: 299;
     background-color: rgb(87, 87, 87);
+    touch-action: none;
 }
 
 #overlay-backdrop.activated.error {
